src/components/general/SelectList.css
.selectList {
    overflow-x: hidden;
    overflow-y: scroll;
    align-items: flex-start;
    white-space: nowrap;
    vertical-align: text-bottom;
    text-align: start;
    box-sizing: border-box;
    /* width: fit-content; */
    width: 100%;
    height: calc(100% - 110px);
    flex: 1;
}

.selectItem {
    display: block;
    white-space: pre;
    min-height: 1.2em;
    padding: 0px 2px 1px;
    cursor: default;
    padding: 10px 5px;
}

.selectedItem {
    background-color: rgb(22, 150, 255);
    color: #FFF;
}

